# PyLyrics

./: pyproject.toml
src/pylyrics/: __init__.py  cli.py  display.py  lyrics.py  media.py
